# onekeepass-core

./: .gitignore  Cargo.toml  README.md  SECURITY-NOTES.md  onekeepass-core.code-workspace
.cargo/: audit.toml
.github/workflows/: integration.yml
src/: async_service.rs  callback_service.rs  constants.rs  custom_icons.rs  db.rs  db_service.rs  error.rs  favicon.rs  lib.rs  net_tls.rs  passkey_crypto.rs  password_generator.rs  searcher.rs  util.rs  xml_parse.rs  xml_parse_023.rs
src/crypto/: block_cipher.rs  hash_functions.rs  kdf.rs  key_cipher.rs  mod.rs  random.rs  stream_cipher.rs
src/crypto/botan_impl/: block_cipher.rs  hash_functions.rs  key_cipher.rs  mod.rs  random.rs  stream_cipher.rs
src/crypto/rust_crypto_impl/: block_cipher.rs  hash_functions.rs  key_cipher.rs  mod.rs  random.rs  stream_cipher.rs
src/db/: file_key.rs  kdbx_file.rs  key_secure.rs  mod.rs  new_db.rs  reader_writer.rs
src/db_content/: cross_db_move.rs  custom_data.rs  entry.rs  entry_type.rs  group.rs  keepass.rs  meta.rs  mod.rs  otp.rs  root.rs  standard_entry_types.rs
src/db_merge/: merger.rs  mod.rs
src/db_merge/merge_tests/: common.rs  icon_merge.rs  mod.rs
src/db_service/: attachment.rs  autofill.rs  browser_extension.rs  callback_service.rs  custom_icon.rs  io.rs  mod.rs  passkey.rs  ssh_agent.rs
src/db_service/storage/: calls.rs  macros.rs  mod.rs  server_connection_config.rs  sftp.rs  webdav.rs
src/form_data/: categories.rs  db_setting.rs  entry.rs  mod.rs  parsing.rs
src/import/: csv_reader.rs  mod.rs
src/password_passphrase_generator/: mod.rs  passphrase_generator.rs  password_generator.rs
src/remote_storage/: callback_service.rs  connection_entry.rs  mod.rs
src/remote_storage/storage_service/: mod.rs  server_connection_config.rs  sftp.rs  webdav.rs
src/searcher/: mod.rs
tests/: db_file_reading_writing.rs  lock_unlock_content.rs
tests/common/: mod.rs
