[package]
name = "onekeepass-core"
version = "0.18.0"
authors = ["jeyasankar"]
edition = "2021"

[dependencies]
argon2-sys = "0.1.0"

secstr = "0.5.1"

data-encoding = "2.8.0"
## TODO: Replace base64 with data-encoding crate
base64 = "0.22.1"
url = "2.5.4"
urlencoding = "2.1.3"

uuid = { version = "1.17.0", features = ["serde", "v4","macro-diagnostics"] }
chrono =  {version = "0.4.41", features = ["serde"]}
chrono-tz = "0.9.0"

flate2 = {version = "1.1", features = ["zlib"]} 

slice_as_array = "1.1.0"
log = "0.4.27"
hex-literal = "0.3.4"
hex = "0.4.3"
once_cell = "1"
thiserror = "2.0.12"
regex = "1.11.1"
lazy_static = "1.5.0"

tokio = { version = "1", features = [ "time" ,"rt", "rt-multi-thread","sync"] }

serde = { version = "1.0.219", features = [ "derive" ]}
serde_json = "1"
rmp-serde = "1.3.0" 
cfg-if = "1.0"

enum_dispatch = "0.3.13"

quick-xml = "0.37.3"

chbs = "0.1.1"
nom = "7.1.3"

csv = "1.3.1"

######## SFTP and WebDav ########

## SFTP and WebDav module moved to mobile side  
## Need to review whether we need to  use SFTP and WebDav modules in desktop
## For now leaving it here just for Error enum building which is yet to be replaced

russh-sftp = "2.0.8"
russh = "0.49"
russh-keys = "0.49"

## This works for ios and android as it uses rustls 
reqwest_dav = {version = "0.1.15", default-features = false,features = ["rustls-tls"]}

######## END SFTP and WebDav ########

## rusqlite = { version = "0.32.0", features = ["bundled"] }

botan = {version = "0.11.1", features = ["vendored"] }


[dependencies.passwords]
version = "*"
features = ["common-password"]

[dev-dependencies]
env_logger = "0.11.8"
test-context = "=0.4.1"



