[package]
name = "onekeepass-core"
version = "0.20.0"
authors = ["jeyasankar"]
edition = "2021"

[dependencies]
argon2-sys = "0.1.0"

secstr = "0.5.1"

data-encoding = "2.9.0"
## TODO: Replace base64 with data-encoding crate
base64 = "0.22.1"
url = "2.5.7"
urlencoding = "2.1.3"

uuid = { version = "1.18.1", features = ["serde", "v4","macro-diagnostics"] }
chrono =  {version = "0.4.42", features = ["serde"]}
chrono-tz = "0.9.0"

flate2 = {version = "1.1", features = ["zlib"]} 

slice_as_array = "1.1.0"
log = "0.4.28"
hex-literal = "0.3.4"
hex = "0.4.3"
once_cell = "1"
thiserror = "2.0.17"
regex = "1.12.2"
lazy_static = "1.5.0"

tokio = { version = "1", features = [ "time" ,"rt", "rt-multi-thread","sync"] }

serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
rmp-serde = "1.3.0" 
cfg-if = "1.0"

enum_dispatch = "0.3.13"

quick-xml = "0.37.5"

chbs = "0.1.1"
nom = "7.1.3"

csv = "1.4.0"

######## SFTP and WebDav ########

## SFTP and WebDav module moved to mobile side  
## Need to review whether we need to  use SFTP and WebDav modules in desktop
## For now leaving it here just for Error enum building which is yet to be replaced

russh-sftp = "2.1.1"
russh = "0.52.1"
russh-keys = "0.49.2"

## This works for ios and android as it uses rustls 
reqwest_dav = {version = "0.1.15", default-features = false,features = ["rustls-tls"]}

######## END SFTP and WebDav ########

## rusqlite = { version = "0.32.0", features = ["bundled"] }

botan = {version = "0.11.1", features = ["vendored"] }

# Passkey / WebAuthn cryptography (shared across desktop and mobile)
p256      = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
sha2      = "0.10"
ciborium  = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }


[dependencies.passwords]
version = "*"
features = ["common-password"]

[dev-dependencies]
env_logger = "0.11.8"
test-context = "=0.4.1"



