[package]
name = "onekeepass-core"
version = "0.23.1"
authors = ["jeyasankar"]
edition = "2021"

[dependencies]
argon2-sys = "0.1.0"

secstr = "0.5.1"

data-encoding = "2.9.0"
## TODO: Replace base64 with data-encoding crate
base64 = "0.22.1"
url = "2.5.7"
urlencoding = "2.1.3"
# Public Suffix List for registrable-domain (eTLD+1) autofill URL matching. The
# list is compiled into the binary (no runtime network / file I/O).
psl = "2"

uuid = { version = "1.18.1", features = ["serde", "v4","macro-diagnostics"] }
chrono =  {version = "0.4.42", features = ["serde"]}
chrono-tz = "0.9.0"

flate2 = {version = "1.1", features = ["zlib"]} 

slice_as_array = "1.1.0"
log = "0.4.28"
hex-literal = "0.3.4"
hex = "0.4.3"
once_cell = "1"
thiserror = "2.0.17"
regex = "1.12.2"
lazy_static = "1.5.0"

tokio = { version = "1", features = [ "time" ,"rt", "rt-multi-thread","sync"] }

serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
rmp-serde = "1.3.0" 
cfg-if = "1.0"

enum_dispatch = "0.3.13"

quick-xml = "0.37.5"

chbs = "0.1.1"
nom = "7.1.3"

csv = "1.4.0"

######## SFTP and WebDav ########


russh-sftp = "2.3.0"
## russh 0.60.3+ fixes RUSTSEC-2026-0154 (unbounded SSH-agent frame allocation).
## russh-keys is no longer a separate dep: keys now live in russh::keys.
russh = "0.61.2"

## This works for ios and android as it uses rustls
reqwest_dav = {version = "0.3.3", default-features = false,features = ["rustls-tls"]}

## reqwest 0.13 (pulled by reqwest_dav 0.3) defaults to rustls-platform-verifier
## for cert validation, which needs JVM init on Android. To avoid that we build a
## rustls config trusting the bundled Mozilla roots (webpki-roots) and hand it to
## reqwest via use_preconfigured_tls (see src/net_tls.rs). rustls is already in the
## tree via reqwest_dav; pinning 0.23 keeps the ClientConfig type matching reqwest's.
rustls = "0.23"
webpki-roots = "1.0"

######## END SFTP and WebDav ########

## rusqlite = { version = "0.32.0", features = ["bundled"] }

botan = {version = "0.11.1", features = ["vendored"] }

# Passkey / WebAuthn cryptography (shared across desktop and mobile)
p256           = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
ed25519-dalek  = { version = "2", features = ["pkcs8", "rand_core"] }
rsa            = { version = "0.9", features = ["sha2"] }
sha2           = "0.10"
ciborium       = "0.2"
rand_core      = { version = "0.6", features = ["getrandom"] }


[dependencies.passwords]
version = "*"
features = ["common-password"]

[features]
favicon = ["dep:reqwest", "dep:image", "dep:ico"]
desktop-ssh-agent = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[dependencies.reqwest]
version = "0.13"
default-features = false
# reqwest 0.13 renamed the rustls feature: "rustls-tls" -> "rustls".
features = ["rustls", "gzip"]
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
optional = true

[dependencies.ico]
version = "0.4"
optional = true

[dev-dependencies]
env_logger = "0.11.8"
test-context = "=0.4.1"

